--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
     align-items: center;
     justify-content: center;
 
+
+
 }
 
 nav {
@@ -90,18 +92,25 @@ a:hover{
 
  .content {
         color: white;
+        padding-left:30px;
+
     }
 
 
 
 .contact-form {
-        position: absolute;
-        bottom:0;
+        position:relative;
+        left:30px;
+        top:80px;
+
+
         width: 30%;
         padding: 10px;
         box-sizing: border-box;
         background-color: lightgreen;
         border-radius:10px;
+
+
 
 
     }
@@ -135,12 +144,13 @@ a:hover{
          height:220px;
          padding: 10px;
          background-color: lightgreen;
-         float: right;
-         right: 20px;
-         position: absolute;
-         bottom: 0;
-         color: white;
-          border-radius:10px;
+         position: relative;
+         right:-900px;
+         margin-top:-160px;
+
+
+         color: black;
+         border-radius:10px;
 
 
 
@@ -174,12 +184,15 @@ a:hover{
     height:240px;
     padding: 25px;
     background-color: lightgreen;
-    float: right;
-    margin-top: -200px;
+    position:relative;
+    left:900px;
+    margin-top: -160px;
     margin-right: 20px;
     color: white;
     border-radius:10px;
-   border: 5px solid black;
+    border: 5px solid black;
+    text-align: center;
+
 
 
 }
@@ -213,32 +226,37 @@ a:hover{
 
 
 .btn{
-     width: 250px;
+     width: 120px;
      height:40px;
      border-radius:5px;
      border: 3px solid black;
      background:lightgrey;
      font-size:18px;
      cursor:pointer;
-     color: white;
+     color: black;
      transition:0.4 s ease;
      margin-bottom:30px;
+     margin-left:10px;
+     text-align:center;
+
 }
 
-. btn a{
+.btn a{
+
               text-decoration:none;
-              color:#000;
+              color:white;
               font-weight:bold;
 
 }
+
 .reg a{
-         padding:70px;
-         color:white;
+         padding:20px;
+         color:black;
   }
 
 
 .reg a:hover{
-          color:black;
+          color:white;
           }
 
 .category{
@@ -252,6 +270,11 @@ a:hover{
      color:white;
 
 }
+
+
+
+
+
 
 
 
