--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-        background-image: url("picture.jpg");
+        background-image: url("background.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
