--- a/style.css
+++ b/style.css
@@ -7,7 +7,19 @@ body {
         position: relative;
         min-height: 100vh;
         padding-bottom: 100px;
-        font-family: Arial, sans-serif;
+        font-family: Verdana;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+  body::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.5); 
+        z-index: -1; 
     }
 
 
