--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body {
         padding-bottom: 100px;
         font-family: Verdana;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        margin: 0;
+        padding: 0;
+        border: 0;
     }
 
   body::before {
